# ie_course_material

./: README.md  __init__.py  pyproject.toml  utils.py
exercises/: 01_regex_basics.py
notebooks/: 01_introduction.ipynb
scripts/: check_setup.py  download_models.py
src/ie_course/: utils.py
